--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-scikit-learn
-pandas==2.0.3
-numpy==1.24.3
-gunicorn==21.2.0
-Werkzeug==2.3.7
-joblib==1.3.2
-scipy==1.11.2
+# --- Build tools (must come first!) ---
 setuptools>=65.0
 wheel
 cython
+numpy==1.24.3     # Compatible with Python 3.11
+scipy==1.11.2
+
+# --- Core packages ---
+pandas==2.0.3
+scikit-learn==1.3.2  # Fully compatible with Python 3.11
+joblib==1.3.2
+
+# --- Flask app ---
+Flask==2.3.3
+Flask-CORS==4.0.0
+gunicorn==21.2.0
+Werkzeug==2.3.7
