--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-# --- Build tools (must come first!) ---
-setuptools>=65.0
-wheel
-cython
-numpy==1.24.3     # Compatible with Python 3.11
-scipy==1.11.2
-
-# --- Core packages ---
-pandas==2.0.3
-scikit-learn==1.3.2  # Fully compatible with Python 3.11
-joblib==1.3.2
-
-# --- Flask app ---
 Flask==2.3.3
 Flask-CORS==4.0.0
+numpy==1.24.3
+scikit-learn==1.3.0
+pandas==2.0.3
 gunicorn==21.2.0
 Werkzeug==2.3.7
