--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-numpy==1.24.3
-scikit-learn==1.3.0
-pandas==2.0.3
-gunicorn==21.2.0
-Werkzeug==2.3.7
+Flask>=2.0.0
+Flask-CORS>=3.0.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
+gunicorn>=20.0.0
